# drf-nuxt-supabase-boilerplate

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: .env.dev  .env.prod  Makefile  requirements.txt
backend/core/: asgi.py  celery_app.py  urls.py  utils.py  wsgi.py
backend/core/config/: applications.py  base.py  cache.py  celery.py  database.py  frontend.py  internationalization.py  middleware.py  rest.py  security.py  sentry.py  settings.py  stripe.py  supabase.py
backend/payment/: models.py
backend/payment/api/: serializers.py  urls.py  views.py
backend/payment/migrations/: 0001_initial.py  0002_alter_usersubscription_id.py
backend/user/: authentication.py  models.py
backend/user/api/: serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_usersubscription.py  0003_alter_usersubscription_table.py  0004_delete_usersubscription.py
